syntax = "proto3";

import "messages/UserActionProto.proto";
import "google/protobuf/empty.proto";


option java_package = "ru.yandex.practicum.grpc.stats.user";

service UserActionController {

  rpc CollectUserAction (UserActionProto) returns (google.protobuf.Empty);

}